lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-10.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 名前
  - false
- - は
  - false
