lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-12.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 本
  - false
- - が
  - false
- - すぐ
  - false
- - そこ
  - false
- - に
  - true
- - ある
  - true
- - の
  - false
- - に
  - false
