lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-14.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 泣きそう
  - true
- - に
  - true
- - なった
  - true
