lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-15.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - と
  - false
- - いう
  - true
