lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-17.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - すぐ
  - false
- - そこ
  - false
- - に
  - false
