lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-18.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - おば
  - false
- - あさ
  - false
- - ん
  - false
