lib/rust/language_pack_jp/tests/snapshots/r#mod__check_inflection_breakpoints-22.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 本
  - false
- - に
  - false
- - 潰されて
  - true
- - 死んだ
  - true
- - の
  - false
- - は
  - false
